# Server-Broker-Electronic-Project

./: .gitignore  CMakeLists.txt
Server-Broker/: CMakeLists.txt  main.cpp
Server-Broker/ClientHttp/: Server.cpp  Server.hpp  index.html
Server-Broker/ClientMCU/: Server.cpp  Server.hpp
Server-Broker/General/: Assert.hpp  Connection.cpp  Connection.hpp  Helper.cpp  Helper.hpp  SensorsData.cpp  SensorsData.hpp  ThreadSafeCout.cpp  ThreadSafeCout.hpp
Server-Broker/Global/: SensorsData.cpp  SensorsData.hpp  ThreadSafeCout.cpp  ThreadSafeCout.hpp
Server-Broker/MainMCU/: Server.cpp  Server.hpp
Server-Broker/Static/: Server.cpp  Server.hpp
html/: index.html
include/ClientHttp/: Server.hpp
include/ClientMCU/: Server.hpp
include/General/: Connection.hpp  Helper.hpp  SensorsData.hpp  ThreadSafeCout.hpp
include/MainMcu/: Server.hpp
src/: main.cpp
src/ClientHttp/: Server.cpp
src/ClientMCU/: Server.cpp
src/General/: Connection.cpp  Helper.cpp  SensorsData.cpp  ThreadSafeCout.cpp
src/MainMcu/: Server.cpp
tests/: test_clients_mcu.py  test_main_mcu.py
